# arc-agi-3-harness

./: .coverage  .gitignore  AGENTS.md  Makefile  README.md  agent_lib.py  claude_headless_runner.py  flux.yaml  game_state.py  harness.py  harness_config_templates.py  harness_explore.py  harness_flux.py  harness_grid_helpers.py  harness_history_helpers.py  harness_repl_health.py  harness_runner.py  harness_runner_args.py  harness_runner_continue.py  harness_runner_keepalive.py  harness_runner_regression.py  harness_runner_start.py  harness_runner_super_cycle.py  harness_runtime.py  harness_runtime_arc_repl.py  harness_runtime_cleanup.py  harness_runtime_conversation.py  harness_runtime_env.py  harness_runtime_images.py  harness_runtime_monitor.py  harness_runtime_prompting.py  harness_runtime_scorecard.py  harness_runtime_session.py  harness_runtime_telemetry.py  harness_runtime_validation.py  harness_scorecard_helpers.py  harness_scorecard_timeout_hack.py  harness_setup_helpers.py  harness_wrapup.py  pyproject.toml  (+3 more)
arc_model_runtime/: __init__.py  cli.py  hooks.py  intercepts.py  io_utils.py  model_status_visible.py  sequence_compare.py  sequence_compare_artifacts.py  sequence_compare_render.py  session.py  state_views.py  transition_diff.py  utils.py  visible_artifacts.py  visible_compare_surface.py  visible_sequence_surface.py
docs/: openai-models.json  openai-models.md  solved-level-wrapup.md
game_ls20/: play_lib.py
prompts/: new_game_auto_explore.py
runs/: INDEX.md
scripts/: lint.py  run_claude_headless.py  run_scored_multi.sh  score_run.py  (+1 more)
ui/: AGENTS.md  (+4 more)
(+240 files in other folders)
