[project]
name = "arc-agi-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "arc-agi>=0.9.1",
    "textual>=1.0.0",
]

[project.scripts]
harness = "harness:main"
viewer = "viewer:main"

[tool.pytest.ini_options]
norecursedirs = ["runs"]
